--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ repositories {
 
 dependencies {
     compile 'org.projectlombok:lombok:+'
-    testCompile 'org.testng:testng:6.11'
+    testCompile 'junit:junit:4.12'
+    testCompile group: 'org.hamcrest', name: 'hamcrest-library', version: '1.3'
 
 }
